@@ -1,44 +1,38 @@
 include ../config
 
-INCLUDE=`zm-config -I`
-LIB=`zm-config -L`
-DEF=`zm-config -D`
+CONFIG=zeo-config
 BINDIR=$(PREFIX)/bin
+
+INCLUDE=`$(CONFIG) -I`
+LIB=`$(CONFIG) -L`
+DEF=`$(CONFIG) -D`
+LINK=`$(CONFIG) -l`
 
 CC=gcc
 CFLAGS=-ansi -Wall -O3 $(INCLUDE) $(LIB) $(DEF)
 
-LINK=-lzeo `zm-config -l`
-
-ifeq ($(CONFIG_USE_DAE),y)
-	DEF += -D__ZEO_USE_DAE
-endif
-
 COMPILE=$(CC) $(CFLAGS) -o $@ $< $(LINK)
-
 INSTALL=install -m 755
 UNINSTALL=rm -f
 
-CONFIGGEN=zeda-config-gen
-CONFIG=zeo-config
-TARGET=$(CONFIG) zeo_qhull zeo_gjk zeo_phconv zeo_stl2ztk mshape2gp
+TARGET=zeo_qhull zeo_gjk zeo_phconv zeo_stl2ztk mshape2gp
 
 #####################################################################
-all : $(TARGET)
+all: $(TARGET)
 
-$(CONFIG):
-	@echo " GENERATE" $@
-	-@rm -f $@
-	@$(CONFIGGEN) -I "$(INCLUDE)" -L "$(LIB)" -D "$(DEF)" -l "$(LINK)" -v $(VERSION) > $@
 %: %.c
 	@echo " CC	" $<
 	@$(COMPILE)
+clean:
+	@echo " CLEAN"
+	-@rm -f *.o *~ core $(TARGET)
 install: $(TARGET)
+ifneq ($(TARGET),)
 	@echo " INSTALL	" $^
 	@$(INSTALL) $^ $(BINDIR)
-clean :
-	@echo " CLEAN"
-	-@rm -f *.o *~ core $(TARGET) *_out
+endif
 uninstall:
+ifneq ($(TARGET),)
 	@echo " UNINSTALL	" $(TARGET)
-	@cd $(BINDIR); $(UNINSTALL) $(TARGET); cd -
+	@$(UNINSTALL) $(BINDIR)/$(TARGET)
+endif
