@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.9.0
+VERSION=1.9.1
 
-DEPENDENCY="zeda=1.5.0;zm=1.3.0"
+DEPENDENCY="zeda=1.5.7;zm=1.3.4"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
