@@ -5,6 +5,7 @@ ROOTDIR:=.
 INCDIR:=$(ROOTDIR)/include/$(PROJNAME)
 SRCDIR:=$(ROOTDIR)/src
 LIBDIR:=$(ROOTDIR)/lib
+TOOLDIR:=$(ROOTDIR)/tools
 APPDIR:=$(ROOTDIR)/app
 DOCDIR:=$(ROOTDIR)/doc
 TESTDIR:=$(ROOTDIR)/test
@@ -12,10 +13,12 @@ SAMPLEDIR:=$(ROOTDIR)/example
 
 CHKDEP=`which zeda-chkdep`
 
-all: library install application
+all: library devtools
 library:
 	@$(CHKDEP) $(DEPENDENCY) || exit 1
 	@cd $(SRCDIR); make
+devtools:
+	@cd $(TOOLDIR); make
 application:
 	@cd $(APPDIR); make
 autotest:
@@ -26,6 +29,7 @@ clean:
 	-@rm -f $(ROOTDIR)/*~ $(INCDIR)/*~
 	@cd $(SRCDIR); make clean
 	-@rm -f $(LIBDIR)/*.so
+	@cd $(TOOLDIR); make clean
 	@cd $(APPDIR); make clean
 	@cd $(DOCDIR); make clean
 	@cd $(SAMPLEDIR); ./allclean.sh
@@ -35,12 +39,12 @@ install:
 	@echo " INSTALL	header files"
 	-@install -m 755 -d $(PREFIX)/include/$(PROJNAME)
 	-@install -m 644 $(INCDIR)/*.h $(PREFIX)/include/$(PROJNAME)/
-	@echo " INSTALL	applications"
-	@cd $(APPDIR); make install
+	@echo " INSTALL	tools"; cd $(TOOLDIR); make install
+	@echo " INSTALL	applications"; cd $(APPDIR); make && make install
 uninstall:
 	@echo " UNINSTALL	library"
 	-@rm $(PREFIX)/lib/lib$(PROJNAME).so
 	@echo " UNINSTALL	header files"
 	-@rm -r $(PREFIX)/include/$(PROJNAME)
-	@echo " UNINSTALL	applications"
-	@cd $(APPDIR); make uninstall
+	@echo " UNINSTALL	tools"; cd $(TOOLDIR); make uninstall
+	@echo " UNINSTALL	applications"; cd $(APPDIR); make uninstall
