@@ -1,0 +1,23 @@
+#This script was automatically generated by zeda-config-gen in ZEDA.
+#2021年 5月 8日 土曜日 09:52:33 JST by zhidao
+#!/bin/sh
+case $1 in
+-I)
+  echo -I/home/zhidao/usr/include -I/usr/include/libxml2
+  ;;
+-L)
+  echo -L/home/zhidao/usr/lib
+  ;;
+-D)
+  echo -D__ZEDA_USE_LIBXML -D__ZEO_USE_DAE
+  ;;
+-l)
+  echo -lzeo -lzm -lzeda -lm -lxml2
+  ;;
+-v)
+  echo 1.9.1
+  ;;
+*)
+  ;;
+esac
+exit 0
